# networking_scripts

./: go.mod  pyproject.toml  renaming_ports.py
renaming_port_script/: .env.example  README.md  pyproject.toml  renaming_ports.py  renaming_ports.spec
renaming_ports_go/: .env.example  go.mod  go.sum  renaming_ports.go
renaming_ports_py/: .env.example  pyproject.toml  readme.md  renaming_ports.py
renaming_ports_script/: renaming_ports.go  renaming_ports.py
